added actions services to get data from db and prompt configured ai for analysis

--- a/ai/ai_exp.ipynb
+++ b/ai/ai_exp.ipynb
@@ -49,7 +49,7 @@
     "]\n",
     "responses = []\n",
     "for w in websites:\n",
-    "    res = classify_website(w, True)\n",
+    "    # res = classify_website(w, True)\n",
     "    responses.append(res)"
    ]
   },
@@ -133,10 +133,45 @@
    "source": [
     "classes = []\n",
     "for w in websites:\n",
-    "    res = classify_website(w, False)\n",
+    "    # res = classify_website(w, False)\n",
     "    classes.append(res)\n",
     "    \n",
     "print(classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary of Today's Screen Time Statistics:\n",
+      "Today, you spent a total of approximately 0.6 minutes on screen. Out of this, about 0.5 minutes were spent on productive activities, and 0 minutes were spent on unproductive activities.  You also had approximately 0.1 minutes of idle time.\n",
+      "\n",
+      "Insights for Improvement:\n",
+      "You have shown a very productive screen time usage today, with the majority of your time spent on productive websites. Your idle time is also minimal, which is excellent. To further optimize, try to set specific time blocks for focused work on productive sites and consider planning your online tasks before you start to maintain efficiency.\n",
+      "\n",
+      "Future Screen Time Plan:\n",
+      "For the future, aim to maintain or increase your productive screen time to at least 2 hours daily, focusing on domains like localhost, chatgpt.com, github.com, and docs.google.com for learning and development. To minimize idle time, try to have a clear objective each time you use your screen, and take deliberate short breaks away from your devices instead of leaving them idle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ai_utils import generate_advice\n",
+    "\n",
+    "input = \"\"\"[\n",
+    "        {\"id\":20,\"userId\":1,\"domain\":null,\"time\":\"2025-02-09T12:01:20.816Z\"},\n",
+    "        {\"id\":21,\"userId\":1,\"domain\":\"localhost\",\"time\":\"2025-02-09T12:01:26.069Z\"},\n",
+    "        {\"id\":22,\"userId\":1,\"domain\":\"chatgpt.com\",\"time\":\"2025-02-09T12:01:37.172Z\"},\n",
+    "        {\"id\":23,\"userId\":1,\"domain\":\"github.com\",\"time\":\"2025-02-09T12:01:51.188Z\"},\n",
+    "        {\"id\":24,\"userId\":1,\"domain\":\"docs.google.com\",\"time\":\"2025-02-09T12:01:57.765Z\"}\n",
+    "    ]\"\"\"\n",
+    "    \n",
+    "res = generate_advice(input)\n",
+    "print(res)"
    ]
   }
  ],
